# SIAM-IA

./: __main__.py  main.py  pyproject.toml  readme.md
libs/: person_detector.py  photo_taker.py  routes_dao.py
